--- a/wp-content/themes/chugach-corp/assets/sass/template/_investment-portfolio.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_investment-portfolio.scss
@@ -175,6 +175,7 @@
             border-radius: 2px;
             box-shadow: 0 11px 12px 0 rgba(0,0,0,0.12);
             padding: rem-calc(0 30 30);
+            border-bottom: 2px solid $lime;
         } 
         
         
