--- a/wp-content/themes/chugach-corp/assets/sass/template/_portfolio.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_portfolio.scss
@@ -382,6 +382,8 @@
     
     .section-business-lines-map {
         
+        padding-bottom: rem-calc(75);
+        
         .row {
             position: relative;   
         }
@@ -392,6 +394,7 @@
             background-color: $blue;
             box-shadow: 0 11px 12px 0 rgba(0,0,0,0.1);
             padding: rem-calc(20 20);
+            margin: 0 auto rem-calc(75);
             
             @include breakpoint(xxxlarge) {
                 position: absolute;
@@ -474,7 +477,7 @@
     background: $green; 
     
     .container {
-        padding: rem-calc(map-get($grid-column-gutter, small)*2);  
+        padding: rem-calc(map-get($grid-column-gutter, small)/2);  
         padding-top: rem-calc(40);  
         
         * {
@@ -506,7 +509,7 @@
         }
     }
     
-    @include breakpoint(980) {
+    @include breakpoint(large) {
         padding: 0;
         top: 0!important;
         left: auto!important;
