--- a/wp-content/themes/chugach-corp/assets/sass/sections/_section.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/sections/_section.scss
@@ -19,6 +19,7 @@ section {
             left: 0;
             width: 100%;
             height: 100%;
+            z-index: 3;
             
             svg {
                 position: absolute;
