single post final sections

--- a/wp-content/themes/chugach-corp/assets/sass/plugins/_slick-custom.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/plugins/_slick-custom.scss
@@ -54,6 +54,16 @@ no-js .slick-arrows {
 }
 
 
+.slick-track{
+    display: flex;
+
+    .slick-slide {
+        display: flex;
+        height: auto;
+    }
+}
+
+
 @mixin slick-arrow( $color: #999, $position: left ) {
     $color: str-replace(#{$color}, '#', '');  
     
