--- a/wp-content/themes/chugach-corp/assets/sass/structure/_modal.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/structure/_modal.scss
@@ -43,25 +43,20 @@
 
 
 .modal-video {
-    position: absolute!important;
+    /*position: absolute!important;
     top: 50%!important;
     left: 50%!important;
     transform: translate(-50%,-50%)!important;  
+    */
     
-    .close-button {
-		position: absolute;
-		top: rem-calc(map-get($grid-column-gutter, small)/2); 
-		right: rem-calc(map-get($grid-column-gutter, small)/2);
-		font-size: 40px;
-		outline: none;
-        color: #fff;
-        cursor: pointer;
+    @include breakpoint(large) {
         
-        @include breakpoint(large) {
-            top: rem-calc(map-get($grid-column-gutter, large)/2); 
-		    right: rem-calc(map-get($grid-column-gutter, large)/2);
+        padding-top: rem-calc(70);
+        
+        .close-button {
+            font-size: 70px;
         }
-  	}
+    }
     
     .column {
         padding-left: 0;
