--- a/wp-content/themes/chugach-corp/assets/sass/plugins/_gravity-forms-reset.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/plugins/_gravity-forms-reset.scss
@@ -46,8 +46,17 @@ body .gform_wrapper ul.gfield_radio li input[type=radio]:checked+label {
         line-height: inherit!important;
         min-height: 0!important;
     }
-}
+    
+    .gform_wrapper .top_label li.gfield.gf_left_third, .gform_wrapper .top_label li.gfield.gf_middle_third, .gform_wrapper .top_label li.gfield.gf_right_third {
+        margin-bottom: 0!important;
+    }
+    
+    .gform_wrapper .ginput_container span:not(.ginput_price) {
+        margin-bottom: rem-calc(14)!important;
+        display: block;
+    }
 
+}
 
 .gform_wrapper .gform_footer {
     padding: 0 0 10px!important;
