--- a/wp-content/themes/chugach-corp/assets/sass/utilities/mixins/_theme.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/utilities/mixins/_theme.scss
@@ -159,6 +159,17 @@
     background-repeat: no-repeat;
 }
 
+@mixin three-lines-gray-alt {
+    content: '';
+    width: 35px;
+    height: 237px;
+    background-image: url("data:image/svg+xml,%0A%3Csvg width='35px' height='237px' viewBox='0 0 35 237' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg id='Mockups' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd' stroke-linecap='square'%3E%3Cg id='Shareholder' transform='translate(-226.000000, -2588.000000)' stroke='%23ECECEC' stroke-width='2'%3E%3Cg id='Group-8' transform='translate(227.000000, 2589.000000)'%3E%3Cpath d='M32.9032642,40.2538462 L32.9032642,236 L32.9032642,40.2538462 Z' id='Line-Copy-2'%3E%3C/path%3E%3Cpath d='M-65.7440476,82 L98,82' id='Line-Copy-3' transform='translate(16.000000, 82.000000) rotate(-270.000000) translate(-16.000000, -82.000000) '%3E%3C/path%3E%3Cpath d='M0,56.9116498 L0,185.204472 L0,56.9116498 Z' id='Line-Copy-4'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-size: contain; 
+    background-repeat: no-repeat;
+}
+
+
+
 @mixin three-lines-green {
     content: '';
     width: 35px;
