Regions map add labels

--- a/wp-content/themes/chugach-corp/assets/sass/template/_front-page.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_front-page.scss
@@ -11,6 +11,11 @@
             min-height: 454px; 
         }
         
+        .wrap .row {
+            min-height: 40vw;  
+            
+        }
+        
         .background-image {
             position: absolute;
             top: 0;
