--- a/wp-content/themes/chugach-corp/assets/sass/template/_portfolio.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_portfolio.scss
@@ -101,6 +101,7 @@
                     letter-spacing: 1.1px;
                     font-family: $roboto;
                     font-weight: 900;
+                    opacity: 0;
                     
                 }
                 
