--- a/wp-content/themes/chugach-corp/assets/sass/plugins/_scrollreveal.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/plugins/_scrollreveal.scss
@@ -58,4 +58,17 @@ html.sr .home {
 }
 
 
-
+// About
+html.sr {
+    .section-timeline {
+        .decade,
+        article {
+            visibility: hidden;
+        }
+    }
+    
+    .fifty-fifty-block-section img {
+        //visibility: hidden;
+    }
+    
+}
