Migrate community blog

--- a/wp-content/themes/chugach-corp/assets/sass/sections/_stories.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/sections/_stories.scss
@@ -157,7 +157,7 @@
     
     .posts {
         article {
-            box-shadow: $box-shadow;
+            // box-shadow: $box-shadow;
                         
             .post-title {
                 padding: rem-calc(15);   
