fix culture show ore list

--- a/wp-content/themes/chugach-corp/assets/sass/template/_culture.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_culture.scss
@@ -209,7 +209,7 @@
                     color: #4A4A4A;   
                 }
                 
-                li:nth-child(n+6) {
+                &.short li:nth-child(n+6) {
                     display:none;
                 }  
             }
